force-app/main/default/objects/Board__c/Board__c.object-meta.xml
<CustomObject>
    <description>Config object: the governing bodies a member can serve on (JCRC Board, UJA Board, UJA Observer). Carries each board's default annual giving commitment and default term length, which seed a member's Board Term + that year's commitment. Executive Committee is a Committee, not a Board. JSI-123 Board Tracking. Author: Jason Ott.</description>
    <label>Board</label>
    <nameField>
        <label>Board Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Boards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>