force-app/main/default/objects/Board__c/fields/Default_Annual_Commitment__c.field-meta.xml
<CustomField>
    <fullName>Default_Annual_Commitment__c</fullName>
    <description>Base annual giving commitment for a member of this board ($5,000 JCRC/UJA; $1,800 UJA Observer). The member's actual commitment is the higher of this base vs. the $10k chair/exec tier. JSI-123 / Jason Ott.</description>
    <label>Default Annual Commitment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>