force-app/main/default/objects/Board__c/fields/Is_Observer__c.field-meta.xml
<CustomField>
    <fullName>Is_Observer__c</fullName>
    <description>TRUE for an observer board (e.g. UJA Observer) — young-leader seats with a lower commitment and a 1-year term. JSI-123 / Jason Ott.</description>
    <label>Is Observer</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
</CustomField>